<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inox</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Liste Troop</string>
    <string name="title_section2">Liste Runes</string>
    <string name="title_section3">Liste Exploration</string>
    <string name="title_section4">Explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Connexion">Connexion</string>
    <string name="CréationDeCompte">Creation d\'un compte</string>
    <string name="Utilisateur">Entrer votre nom d\'utilisateur</string>
    <string name="MotDePasse">Entrer votre mot de passe</string>
    <string name="MotDePasseConfirmation">Confirmer votre mot de passe</string>
    <string name="Nom">Entrer votre nom</string>
    <string name="Créer">Créer</string>
    <string name="Annuler">Annuler</string>
    <string name="Depart">Depart de l\'exploration</string>
    <string name="Arriver">Arriver de l\'exploration</string>
    <string name="date">Date de l\'exploration</string>
    <string name="Exploration">Voici les détails de l\'exploration</string>
    <string name="troop">Détails d\'une troop</string>
    <string name="name">Nom de la troop</string>
    <string name="stat">Statistique d\'une troop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Achat">Acheter la troop</string>
    <string name="PasAchat">Ne pas acheter la troop</string>
    <string name="dialog_message">Vous n\'avez pas assez de troop</string>
    <string name="dialog_title">Réfuser</string>
    <string name="error">Erreur lors du chargement</string>

</resources>
