<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cstj.android.inox.ConnexionFragment">


    <EditText
        android:id="@+id/nom"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/Nom" />

    <EditText
        android:id="@+id/creationUtilisateur"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_marginTop="70dp"
        android:hint="@string/Utilisateur" />

    <EditText
        android:id="@+id/creationMotDePasse"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:inputType="textPassword"
        android:hint="@string/MotDePasse"/>

    <EditText
        android:id="@+id/motDePasseConfirmation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="210dp"
        android:inputType="textPassword"
        android:hint="@string/MotDePasseConfirmation"/>

    <Button
        android:id="@+id/buttonCreer"
        android:layout_height="60dp"
        android:layout_width="150dp"
        android:layout_marginTop="350dp"
        android:text="@string/Créer"/>

    <Button
        android:id="@+id/buttonAnnuler"
        android:layout_height="60dp"
        android:layout_width="150dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="210dp"
        android:text="@string/Annuler" />

</FrameLayout>